#
# Copyright (c) 2020-2021 Massachusetts General Hospital. All rights reserved. 
# This program and the accompanying materials  are made available under the terms 
# of the Mozilla Public License v. 2.0 ( http://mozilla.org/MPL/2.0/) and under 
# the terms of the Healthcare Disclaimer.
#
[project]
name = "i2b2-cdi-qs-mozilla"
version = "1.3.4"


[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4","Cython"]
#build-backend = "setuptools.build_meta"


#responsible for adding only .so files bt not working for .csv and .sql also no any .py added
#no need to declare in setup.py 
[tools.setuptools.package.find]
where = ["src"]